// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range render should render properly with default props 1`] = `
<div
  className="range"
>
  <span />
   
  <span />
  <input
    className="control"
    onChange={[Function]}
    type="range"
    value="NaN"
  />
</div>
`;

exports[`Range render should render properly with defined props 1`] = `
<div
  className="range outer"
>
  <span>
    Day
  </span>
   
  <span>
    Night
  </span>
  <input
    className="control"
    name="FOO"
    onChange={[Function]}
    type="range"
    value="50"
  />
</div>
`;
